--- a/style.css
+++ b/style.css
@@ -446,25 +446,24 @@ h1, h2, h3, h4, h5, h6 {
 .contact-container {
     position: relative;
     right: 20px;
-    height: 100%;
+    height: calc(100vh - 170px);
     display: flex;
     align-items: center;
     justify-content: center;
-    bottom: 24px;
+    bottom: 18px;
 }
 
 .contact-container .contact-form {
     display: flex;
     flex-direction: column;
     gap: 0px;
-    height: 100%;
     padding: 20px;
     border-radius: 5px;
 }
 
 .contact-container .contact-inputs {
     width: 400px;
-    height: 50px;
+    height: 60px;
     border: 1px solid #ccc;
     outline: none;
     padding: 10px 25px;
@@ -518,7 +517,6 @@ label {
     left: 0;
     position: absolute;
     padding-top: 3px;
-    border-bottom: 1px solid #fff;
 }
 
 .contact-num,
@@ -571,9 +569,11 @@ label {
 
 .copyright {
     position: absolute;
-    bottom: 18px;
+    bottom: 12px;
+    padding-top: 5px;
     left: 0;
-    width: calc(100vw - 600px);
+    width: calc(100vw - 100px);
+    border-top: 1px solid #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -591,7 +591,7 @@ label {
     height: 170px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     position: relative;
     overflow: hidden;
 }
@@ -600,7 +600,7 @@ label {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 15px 120px 0;
+    margin-top: 15px;
 }
 
 .flag-container .flag1,
@@ -623,7 +623,7 @@ label {
 }
 
 .work .content {
-    width: 750px;
+    width: 650px;
     text-align: center;
     color: #000;
     display: flex;
@@ -633,7 +633,7 @@ label {
 
 .work .content p{
     width: 100%;
-    font-size: 28px;
+    font-size: 22px;
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -928,7 +928,7 @@ label {
 
 .service-main-list {
     text-align: center;
-    margin-top: 6rem;
+    margin-top: 3rem;
     position: absolute;
     right: 70px;
 }
@@ -969,7 +969,7 @@ label {
     display: flex;
     position: absolute;
     width: 88%;
-    bottom: 10px;
+    bottom: 20px;
     left: 130px;
 }
 
@@ -978,8 +978,9 @@ label {
     font-weight: 800;
     line-height: 1;
     margin-right: 20px;
+    margin-left: 20px;
     max-width: 350px;
-    bottom: 6px;
+    bottom: 18px;
     position: absolute;
 }
 
@@ -987,7 +988,7 @@ label {
     font-size: 18px;
     font-weight: 400;
     bottom: 0;
-    width: 67%;
+    width: 59%;
     right: 0;
     position: absolute;
 }
@@ -1013,9 +1014,21 @@ label {
 .creative-services .creative-heading,
 .dev-services .dev-heading,
 .digital-services .digital-heading {
-    font-size: 26px;
+    font-size: 45px;
     font-weight: 800;
-    border-bottom: 2px solid #f9b000;
+    margin-bottom: 5px;
+}
+
+.creative-services .creative-heading {
+    color: #7077A1;
+}
+
+.dev-services .dev-heading {
+    color: #F57D1F;
+}
+
+.digital-services .digital-heading {
+    color: #50727B;
 }
 
 .creative-services .creative-content,
@@ -1114,8 +1127,8 @@ label {
 .creative-icon,
 .dev-icon,
 .digital-icon {
-    width: 55px;
-    height: 60px;
+    width: 52px;
+    height: 57px;
     line-height: 80px;
     text-align: center;
     position: absolute;
@@ -1926,6 +1939,18 @@ p.menu-text-title {
 ====================================== */
 
 @media screen and (max-width: 1370px) {
+    .service-content {
+        bottom: 10px;
+    }
+    .service-content .subservice-content {
+        width: 67%;
+    }
+    .contact-container {
+        bottom: 50px;
+    }
+    .contact-container .contact-inputs {
+        height: 50px;
+    }
     .container .services-heading {
         margin-top: 11.4rem;
     }
