--- a/style.css
+++ b/style.css
@@ -1027,7 +1027,7 @@ label {
     flex-direction: column;
     justify-content: flex-start;
     align-items: start;
-    padding: 20px 10px 30px 150px;
+    padding: 20px 10px 30px 100px;
     margin-left: 0;
     overflow: hidden;
 }
@@ -1138,6 +1138,8 @@ label {
     align-items: center;
     justify-content: center;
     margin: 20px 0;
+    margin-left: 100px;
+    margin-right: 30px;
 }
 
 .dev-sections.swiper {
@@ -1146,7 +1148,7 @@ label {
 }
 
 .swiper {
-    width: 100%;
+    width: 90%;
     height: 100%;
 }
 
@@ -1167,9 +1169,9 @@ label {
     -ms-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
     transition: all .2s ease-in;
-    max-width: 320px;
+    max-width: auto;
     margin: 0 30px;
-    height: 260px;
+    height: 270px;
 } 
 
 .creative-list:hover,
