--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 #loader {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background: #000 url(assets/loader.webp) no-repeat center;
     position: fixed;
@@ -81,8 +81,6 @@ body a {
     text-decoration: none;
     color: #000000;    
     transition: color .2s linear;
-    background-color: .2s linear;
-    border-color: .2s linear;
 }
 
 .site-wrapper img {
@@ -446,25 +444,24 @@ h1, h2, h3, h4, h5, h6 {
 .contact-container {
     position: relative;
     right: 20px;
-    height: 100%;
+    height: calc(100vh - 170px);
     display: flex;
     align-items: center;
     justify-content: center;
-    bottom: 24px;
+    bottom: 18px;
 }
 
 .contact-container .contact-form {
     display: flex;
     flex-direction: column;
     gap: 0px;
-    height: 100%;
     padding: 20px;
     border-radius: 5px;
 }
 
 .contact-container .contact-inputs {
     width: 400px;
-    height: 50px;
+    height: 60px;
     border: 1px solid #ccc;
     outline: none;
     padding: 10px 25px;
@@ -518,7 +515,6 @@ label {
     left: 0;
     position: absolute;
     padding-top: 3px;
-    border-bottom: 1px solid #fff;
 }
 
 .contact-num,
@@ -571,9 +567,11 @@ label {
 
 .copyright {
     position: absolute;
-    bottom: 18px;
+    bottom: 12px;
+    padding-top: 5px;
     left: 0;
-    width: calc(100vw - 600px);
+    width: calc(100vw - 100px);
+    border-top: 1px solid #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -586,12 +584,17 @@ label {
 }
 
 /* WORK */
+
+.mobile.work {
+    display: none;
+}
+
 .work {
     width: calc(100vw - 100px);
     height: 170px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     position: relative;
     overflow: hidden;
 }
@@ -600,7 +603,7 @@ label {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 15px 120px 0;
+    margin-top: 15px;
 }
 
 .flag-container .flag1,
@@ -623,7 +626,7 @@ label {
 }
 
 .work .content {
-    width: 750px;
+    width: 650px;
     text-align: center;
     color: #000;
     display: flex;
@@ -633,7 +636,7 @@ label {
 
 .work .content p{
     width: 100%;
-    font-size: 28px;
+    font-size: 22px;
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -689,6 +692,26 @@ label {
 .pride img {
     width: 26px;
     border-radius: 50%;
+}
+
+.container {
+    width: 100vw;
+}
+
+.contact-copyright.copyright-section {
+    height: 100vh;
+    width: calc(100vw - 100px);
+    left: 100px;
+    overflow: hidden;
+}
+.copyright-section .logo-contact {
+    top: 40px;
+}
+.contact-copyright.copyright-section .contact-details {
+    width: 100%;
+}
+.contact-copyright.copyright-section .copyright {
+    width: 100%;
 }
 
 
@@ -810,11 +833,12 @@ label {
 
 /* CONTACT */
 .contact-container.contact-career {
+    width: 100vw;
+    height: 100%;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
 }
 
 .contact-container.contact-career .contact-form {
@@ -831,6 +855,7 @@ label {
     font-weight: 600;
     color: #000;
     font-size: 40px;
+    margin-top: 30px;
     margin-bottom: 5px;
 }
 
@@ -891,6 +916,7 @@ label {
 
 /* SERVICES */
 .services-wrapper {
+    width: 100vw;
     background-color: #fff4ea;
 }
 
@@ -928,7 +954,7 @@ label {
 
 .service-main-list {
     text-align: center;
-    margin-top: 6rem;
+    margin-top: 3rem;
     position: absolute;
     right: 70px;
 }
@@ -953,7 +979,7 @@ label {
 
 .service-main-list li:nth-child(1) a {
     font-size: 120px;
-    color: #7077A1;
+    color: #875fc9;
 }
 
 .service-main-list li:nth-child(2) a {
@@ -961,7 +987,7 @@ label {
 }
 
 .service-main-list li:nth-child(3) a {
-    color: #50727B;
+    color: #1fb2bd;
     line-height: 0.5;
 }
 
@@ -969,7 +995,7 @@ label {
     display: flex;
     position: absolute;
     width: 88%;
-    bottom: 10px;
+    bottom: 20px;
     left: 130px;
 }
 
@@ -978,8 +1004,9 @@ label {
     font-weight: 800;
     line-height: 1;
     margin-right: 20px;
+    margin-left: 20px;
     max-width: 350px;
-    bottom: 6px;
+    bottom: 5px;
     position: absolute;
 }
 
@@ -987,7 +1014,7 @@ label {
     font-size: 18px;
     font-weight: 400;
     bottom: 0;
-    width: 67%;
+    width: 59%;
     right: 0;
     position: absolute;
 }
@@ -1000,22 +1027,34 @@ label {
     flex-direction: column;
     justify-content: flex-start;
     align-items: start;
-    padding: 50px 10px 60px 150px;
+    padding: 100px 10px 30px 100px;
     margin-left: 0;
     overflow: hidden;
 }
 
 .container .digital-services {
     margin-bottom: 0;
-    padding-bottom: 30px;
+    padding-bottom: 80px;
 }
 
 .creative-services .creative-heading,
 .dev-services .dev-heading,
 .digital-services .digital-heading {
-    font-size: 26px;
+    font-size: 45px;
     font-weight: 800;
-    border-bottom: 2px solid #f9b000;
+    margin-bottom: 5px;
+}
+
+.creative-services .creative-heading {
+    color: #875fc9;
+}
+
+.dev-services .dev-heading {
+    color: #F57D1F;
+}
+
+.digital-services .digital-heading {
+    color: #1fb2bd;
 }
 
 .creative-services .creative-content,
@@ -1034,6 +1073,30 @@ label {
     overflow: hidden;
 }
 
+.service-top {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.service-left {
+    position: relative;
+    left: 120px;
+    width: 250px;
+}
+
+.service-left img {
+    width: 100%;
+}
+
+.service-right {
+    position: absolute;
+    right: 120px;
+    width: 560px;
+}
+
 .creative-row,
 .dev-row,
 .digital-row {
@@ -1049,15 +1112,15 @@ label {
 }
 
 .creative-list h4 {
-    color: #9caaff;
+    color: #875fc9;
 }
 
 .dev-list h4 {
-    color: #f88934;
+    color: #F57D1F;
 }
 
 .digital-list h4 {
-    color: #72e7d4;
+    color: #1fb2bd;
 }
 
 .creative-sections {
@@ -1079,7 +1142,7 @@ label {
 }
 
 .swiper {
-    width: 100%;
+    width: 90%;
     height: 100%;
 }
 
@@ -1090,7 +1153,7 @@ label {
     border: 2px solid #292726;
     color: #fff;
     margin-top: 40px;
-    padding: 20px 25px;
+    padding: 20px 20px;
     position: relative;
     border-radius: 12px;
     -webkit-box-shadow: 0 15px 20px 0 rgb(0 0 0 / 8%);
@@ -1100,9 +1163,9 @@ label {
     -ms-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
     transition: all .2s ease-in;
-    max-width: 320px;
+    max-width: auto;
     margin: 0 30px;
-    height: 380px;
+    height: 260px;
 } 
 
 .creative-list:hover,
@@ -1114,8 +1177,8 @@ label {
 .creative-icon,
 .dev-icon,
 .digital-icon {
-    width: 55px;
-    height: 60px;
+    width: 52px;
+    height: 57px;
     line-height: 80px;
     text-align: center;
     position: absolute;
@@ -1199,12 +1262,19 @@ label {
 }
 
 /* SEO */
-.services-main .service {
+.services-part {
+    position: relative;
+    width: calc(100vw - 100px);
+    left: 100px;
+}
+
+.services-part .service {
     display: flex;
     align-items: center;
     justify-content: space-around;
     position: relative;
-    top: 50px;
+    top: 60px;
+    width: 100%;
 }
 
 .service .service-heading {
@@ -1222,8 +1292,8 @@ label {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 90px;
-    margin-left: 0px;
+    padding-top: 150px;
+    margin-left: 50px;
     margin-right: 80px;
 }
 
@@ -1238,19 +1308,21 @@ label {
     margin-top: 10px;
 }
 
-.seo-expertise,
-.seo-choose {
+.service-expertise,
+.service-choose {
     display: flex;
     flex-direction: column;
-    padding-top: 30px;
+    padding-top: 80px;
+    margin-left: 50px;
+    margin-right: 30px;
 }
 
-.seo-choose li:last-child{
+.service-choose li:last-child{
     padding-bottom: 30px;
 }
 
-.seo-expertise .expertise-title,
-.seo-choose .choose-title {
+.service-expertise .expertise-title,
+.service-choose .choose-title {
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 5px;
@@ -1258,28 +1330,55 @@ label {
     width: 145px;
 }
 
-.seo-choose .choose-title {
+.service-choose .choose-title {
     width: 177px;
 }
 
-.seo-expertise li,
-.seo-choose li {
+.service-expertise li,
+.service-choose li {
     list-style-type: square;
     margin-left: 20px;
     margin-right: 50px;
 }
 
-.seo-expertise li a,
-.seo-choose li a {
-    font-size: 16px;
+.service-expertise li a,
+.service-choose li a {
+    font-size: 18px;
     font-weight: 700;
     color: #15616d;
+    cursor: auto;
 }
 
-.seo-expertise li a span,
-.seo-choose li a span {
+.service-expertise li a span,
+.service-choose li a span {
     font-weight: 500;
     color: #000;
+}
+
+/* ecommerce */
+
+.service-expertise.ecommerce .expertise-title {
+    width: 222px;
+}
+
+.service-expertise.ux .expertise-title {
+    width: 160px;
+}
+
+.service-expertise.ui .expertise-title {
+    width: 160px;
+}
+
+.service-expertise.webflow .expertise-title {
+    width: 265px;
+}
+
+.service-expertise.shopify .expertise-title {
+    width: 185px;
+}
+
+.service-expertise.woocommerce .expertise-title {
+    width: 270px;
 }
 
 /* ===================================
@@ -1926,6 +2025,18 @@ p.menu-text-title {
 ====================================== */
 
 @media screen and (max-width: 1370px) {
+    .service-content {
+        bottom: 10px;
+    }
+    .service-content .subservice-content {
+        width: 67%;
+    }
+    .contact-container {
+        bottom: 50px;
+    }
+    .contact-container .contact-inputs {
+        height: 50px;
+    }
     .container .services-heading {
         margin-top: 11.4rem;
     }
@@ -2429,9 +2540,6 @@ p.menu-text-title {
         background-color: #000;
         width: 100%;
     }
-    .home h1 {
-        font-size: 55px;
-    }
     .about-us {
         width: 100%;
         height: calc(100vh - 80px);
@@ -2530,7 +2638,7 @@ p.menu-text-title {
         flex-direction: column;
         width: 100%;
         margin-left: 0;
-        gap: 0px;
+        gap: 5px;
         bottom: 45px;
     }
     .contact-phone, 
@@ -2547,14 +2655,23 @@ p.menu-text-title {
         font-size: 12px;
         color: #fff;
     }
-    .work {
+    .contact-work .work {
         display: none;
+    }
+    .mobile.work {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        height: 100%;
+        bottom: 45px;
     }
     .flag-container {
         flex-direction: row;
         top: 20px;
-        left: 46px;
         gap: 20px;
+    }
+    .flag-container .flag2 {
+        margin-bottom: 10px;
     }
     .work .content {
         max-width: 331px;
@@ -2562,6 +2679,25 @@ p.menu-text-title {
     }
     .work .content p {
         font-size: 16px;
+    }
+    .contact-copyright.copyright-section {
+        width: 100%;
+        left: 0;
+    }
+    .copyright-section .logo-contact {
+        top: 10px;
+    }
+    .contact-container.contact-career {
+        top: 40px;
+    }
+    .contact-container.contact-career .contact-title h2 {
+        font-size: 25px;
+    }
+    .contact-container.contact-career .contact-inputs {
+        width: 300px;
+    }
+    .contact-container.contact-career button {
+        margin-bottom: 40px;
     }
     .horizontal-slider .no-horizontal-slider {
         margin-left: 0;
@@ -2622,6 +2758,8 @@ p.menu-text-title {
     }
     .container section {
         margin-top: 70px;
+        width: 100%;
+        left: 0;
     }
     .contact-container {
         overflow-y: scroll;
@@ -2676,6 +2814,9 @@ p.menu-text-title {
     .service-main-list li {
         margin-bottom: 0;
     }
+    .service-main-list li:last-child {
+        margin-top: 0;
+    }
     .service-main-list li a {
         font-size: 45px;
     }
@@ -2706,6 +2847,18 @@ p.menu-text-title {
         margin-top: 5px;
         bottom: auto;
     }
+    .service-top {
+        display: block;
+        padding-bottom: 300px;
+    }
+    .service-left img {
+        display: none;
+    }
+    .service-right {
+        right: 0;
+        width: 100%;
+        padding: 0 20px;
+    }
     .container .dev-services,
     .container .digital-services {
         display: none;
@@ -2730,8 +2883,16 @@ p.menu-text-title {
     .mobile-digital-services .digital-heading {
         font-size: 24px;
         font-weight: 700;
-        border-bottom: 2px solid #f9b000;
         margin: 0 20px;
+    }
+    .creative-services .creative-heading {
+        font-size: 24px;
+    }
+    .mobile-dev-services .dev-heading {
+        color: #F57D1F;
+    }
+    .mobile-digital-services .digital-heading {
+        color: #50727B;
     }
     .mobile-dev-services .dev-content,
     .mobile-digital-services .digital-content {
@@ -2796,10 +2957,21 @@ p.menu-text-title {
         display: block;
         top: 80px;
     }
-    .service.seo {
-        top: 20px;
+    .services-part .service {
+        top: 40px;
         flex-direction: column;
+    }
+    .service.seo {
         gap: 30px;
+    }
+    .service.ecommerce {
+        gap: 20px;
+    }
+    .ecommerce .service-name {
+        font-size: 50px;
+    }
+    .service-description .description-content {
+        margin-top: 0;
     }
     .service-description {
         margin-right: 10px;
@@ -2838,5 +3010,8 @@ p.menu-text-title {
     }
     .digital-col:last-child {
         margin-bottom: 150px;
+    }
+    .seo-expertise, .seo-choose {
+        margin-left: 0;
     }
 }
